# deepin-unioncode

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.en.md  README.md  README.zh_CN.md  patch.patch
assets/: CMakeLists.txt
assets/configures/: dapconfig.support  editorstyle_cpp.support  editorstyle_java.support  editorstyle_json.support  editorstyle_python.support  language.support  translate.support  unioncode.desktop  windowstyle.support
assets/dev/duc-base/: duc-baseConfig.cmake.in
assets/dev/duc-framework/: duc-frameworkConfig.cmake.in
assets/dev/duc-services/: duc-services.pc.in
assets/templates/: templates.json
assets/translations/: en_US.ts  translate_generation.sh  zh_CN.ts
src/: CMakeLists.txt
src/app/: CMakeLists.txt  commandexecuter.cpp  commandexecuter.h  commandparser.cpp  commandparser.h  config.h  config.h.in  main.cpp
src/base/: CMakeLists.txt  abstractaction.cpp  abstractaction.h  abstractcentral.cpp  abstractcentral.h  abstractconsole.cpp  abstractconsole.h  abstractdebugger.cpp  abstractdebugger.h  abstractdocumentfind.cpp  abstractdocumentfind.h  abstractedit.cpp  abstractedit.h  abstracteditormenu.cpp  abstracteditormenu.h  abstracteditwidget.cpp  abstracteditwidget.h  abstractinlinecompletionprovider.cpp  abstractinlinecompletionprovider.h  abstractinstaller.cpp  abstractinstaller.h  abstractlexerproxy.cpp  abstractlexerproxy.h  abstractlocator.cpp  abstractlocator.h  abstractmainwindow.cpp  abstractmainwindow.h  abstractmenu.cpp  abstractmenu.h  abstractmenubar.cpp  abstractmenubar.h  abstractnav.cpp  abstractnav.h  abstractoutputpane.cpp  abstractoutputpane.h  abstractoutputparser.cpp  abstractoutputparser.h  abstractwidget.cpp  abstractwidget.h  basefilelocator.cpp  (+3 more)
src/base/ai/: abstractllm.cpp  abstractllm.h  conversation.cpp  conversation.h
src/common/: CMakeLists.txt  common.h  common.qrc  common_global.h  constants.h  unilog.h
src/common/actionmanager/: action_define.h  actioncontainer.cpp  actioncontainer.h  actionmanager.cpp  actionmanager.h  actionmanager_p.h  command.cpp  command.h  command_p.h  commandaction.cpp  commandaction.h
src/common/dialog/: commondialog.cpp  commondialog.h  contextdialog.cpp  contextdialog.h  pip3dialog.cpp  pip3dialog.h  processdialog.cpp  processdialog.h  propertiesdialog.cpp  propertiesdialog.h  wgetdialog.cpp  wgetdialog.h
src/common/find/: abstractdocumentfind.h  outputdocumentfind.cpp  outputdocumentfind.h
src/common/inotify/: inotify.cpp  inotify.h
src/common/lsp/: client.cpp  client.h  lsp.h  newprotocol.cpp  newprotocol.h  procserver.cpp  procserver.h  protocol.cpp  protocol.h  stdinjsonrpcparser.cpp  stdinjsonrpcparser.h
src/common/project/: projectinfo.h
src/common/resource/: common.qrc
src/common/settings/: settingdata.cpp  settingdata.h  settings.cpp  settings.h
src/common/supportfile/: builder.cpp  builder.h  dapconfig.cpp  dapconfig.h  editorstyle.cpp  editorstyle.h  language.cpp  language.h  windowstyle.cpp  windowstyle.h
src/common/toolchain/: toolchain.cpp  toolchain.h
src/common/tooltip/: tips.cpp  tips.h  tooltip.cpp  tooltip.h
src/common/type/: constants.cpp  constants.h  menuext.h  task.cpp  task.h
src/common/util/: commandparser.cpp  commandparser.h  config.h.in  customicons.cpp  customicons.h  custompaths.cpp  custompaths.h  downloadutil.cpp  downloadutil.h  environment.cpp  environment.h  eventdefinitions.cpp  eventdefinitions.h  fileoperation.cpp  fileoperation.h  fileutils.cpp  fileutils.h  fuzzymatcher.cpp  fuzzymatcher.h  hostsysteminfo.h  macroexpander.cpp  macroexpander.h  markdownparser.cpp  markdownparser.h  namevaluemodel.cpp  namevaluemodel.h  oshelper.h  polkit.cpp  polkit.h  processutil.cpp  processutil.h  qtcassert.h  shortcututil.cpp  shortcututil.h  singleton.h  spinnerpainter.cpp  spinnerpainter.h  supportfile.cpp  supportfile.h  themeparser.cpp  (+4 more)
src/common/widget/: appoutputpane.cpp  appoutputpane.h  collapsewidget.cpp  collapsewidget.h  configurewidget.cpp  configurewidget.h  detailsbutton.cpp  detailsbutton.h  elidedlabel.cpp  elidedlabel.h  generator.cpp  generator.h  hotkeylineedit.cpp  hotkeylineedit.h  messagebox.cpp  messagebox.h  omittablelabel.cpp  omittablelabel.h  outputpane.cpp  outputpane.h  pagewidget.cpp  pagewidget.h  singlechoicebox.cpp  singlechoicebox.h  statuswidget.cpp  statuswidget.h  variablechooser.cpp  variablechooser.h
src/configures/: CMakeLists.txt  binarytool.support  dapconfig.support  deepin-unioncode.elf  editorstyle_cmake.support  editorstyle_cpp.support  editorstyle_java.support  editorstyle_js.support  editorstyle_json.support  editorstyle_python.support  language.support  translate.support  unioncode.desktop
src/framework/: CMakeLists.txt  framework.cpp  framework.h  framework_global.h
src/framework/abus/: appbus.cpp  appbus.h
src/framework/backtrace/: backtrace.cpp  backtrace.h
src/framework/event/: event.cpp  event.h  eventcallproxy.cpp  eventcallproxy.h  eventhandler.cpp  eventhandler.h
src/framework/lifecycle/: lifecycle.cpp  lifecycle.h  plugin.cpp  plugin.h  plugindepend.h  pluginmanager.cpp  pluginmanager.h  pluginmetaobject.cpp  pluginmetaobject.h  pluginsetting.cpp  pluginsetting.h  pluginview.cpp  pluginview.h
src/framework/listener/: listener.cpp  listener.h
src/framework/log/: codetimecheck.cpp  codetimecheck.h  frameworklog.cpp  frameworklog.h  logutils.cpp  logutils.h
src/framework/service/: pluginservice.h  pluginservicecontext.cpp  pluginservicecontext.h  qtclassfactory.h  qtclassmanager.h
src/plugins/: CMakeLists.txt
src/plugins/actionanalyse/: CMakeLists.txt  actionanalyseplugin.cpp  actionanalyseplugin.h  actionanalyseplugin.json
src/plugins/aimanager/: CMakeLists.txt  aimanager.cpp  (+7 more)
src/resource/: CMakeLists.txt
src/scripts/: CMakeLists.txt  apricot  config.json  container-down.sh  container-up.sh  import-docker-image.sh  jdtls_run.sh  readme.md  runc-ifup.sh  toolchain  toolchain.sh  unioncode-cmake  unioncode-cmake.sh  unioncode-ninja.sh
src/services/: CMakeLists.txt  optionservice.cpp  optionservice.h  services_global.h
src/tools/: CMakeLists.txt
(+2366 files in other folders)
