add_subdirectory(core)
add_subdirectory(recent)
add_subdirectory(debugger)
add_subdirectory(codeeditor)
add_subdirectory(filebrowser)
add_subdirectory(collaborators)
add_subdirectory(console)
add_subdirectory(builder)
#remove it until system lock issue resolved.
#add_subdirectory(container)
add_subdirectory(project)
add_subdirectory(symbol)
add_subdirectory(find)
add_subdirectory(option)
add_subdirectory(codeporting)
add_subdirectory(performance)
if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "loongarch64")
    message("reverse debug disabled on loongarch64")
else()
    if (NOT DISABLE_MODULE)
        add_subdirectory(reversedebug)
    endif()
endif()
add_subdirectory(cxx)
add_subdirectory(javascript)
add_subdirectory(java)
add_subdirectory(python)
add_subdirectory(template)
add_subdirectory(actionanalyse)
add_subdirectory(valgrind)
add_subdirectory(binarytools)
add_subdirectory(commandproxy)
