add_subdirectory(core)
add_subdirectory(recent)
add_subdirectory(debugger)
add_subdirectory(codeeditor)
add_subdirectory(filebrowser)
add_subdirectory(collaborators)
add_subdirectory(console)
add_subdirectory(builder)
#remove it until system lock issue resolved.
#add_subdirectory(container)
add_subdirectory(project)
if (NOT ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "mips64"
        AND NOT ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "sw_64")
    add_subdirectory(symbol)
endif()
add_subdirectory(find)
add_subdirectory(option)
add_subdirectory(codeporting)
add_subdirectory(performance)

if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64"
        OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
    if (NOT DISABLE_MODULE)
        add_subdirectory(reversedebug)
    endif()
else()
    message("reverse debug disabled on ${CMAKE_SYSTEM_PROCESSOR}")
endif()

add_subdirectory(cxx)
add_subdirectory(javascript)
add_subdirectory(java)
add_subdirectory(python)
add_subdirectory(template)
add_subdirectory(actionanalyse)
add_subdirectory(valgrind)
add_subdirectory(binarytools)
add_subdirectory(commandproxy)
add_subdirectory(codegeex)
